<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:gravity="bottom">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bottom_dialog_background"
        android:elevation="8dp"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp"
        android:paddingTop="@dimen/_16sdp"
        android:paddingBottom="@dimen/_48sdp">

        <FrameLayout
            android:id="@+id/layout_native"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/frNativeAds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24sdp">

            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/ivClose"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/icon_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_24sdp"
            android:background="@drawable/dialog_background_round"
           >

            <!-- Step 1 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/_12sdp">

                <TextView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/l_1"
                   />

                <TextView
                    android:id="@+id/textGuide1"
                    android:layout_width="0dp"
                    android:textFontWeight="400"
                    android:textSize="14sp"
                    android:textColor="@color/text1"
                    android:fontFamily="sans-serif"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:text="@string/select_this_pdf_reader_icon_in_the_app_list"
                  />

            </LinearLayout>

            <!-- Step 2 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingBottom="@dimen/_12sdp">

                <TextView
                    android:layout_width="@dimen/_24sdp"
                    android:layout_height="@dimen/_24sdp"
                    android:background="@drawable/l_2"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textGuide2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textFontWeight="400"
                    android:textColor="@color/text1"
                    android:textSize="14sp"
                    android:fontFamily="sans-serif"
                    android:layout_marginStart="8dp"
                    android:text='@string/select_pdf_reader_icon_and_click_always_to_set_it_as_default'
                   />


            </LinearLayout>

            <!-- Icon Row -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
               >

                <!-- First item -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:background="@drawable/icon_logo" />

                    <TextView
                        android:layout_marginTop="@dimen/_2sdp"
                        android:layout_width="wrap_content"
                        android:lines="2"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"
                        android:textSize="@dimen/_8sdp"
                        android:fontFamily="sans-serif-black"
                        android:textColor="@color/text1"
                        android:gravity="center"/>
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <!-- Second item -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/dummy_app_place" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="14sp"
                        android:textColor="@color/text1"
                        android:gravity="center"/>
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <!-- Third item -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/dummy_app_place" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="14sp"
                        android:textColor="@color/text1"
                        android:gravity="center"/>
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <!-- Fourth item -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/dummy_app_place" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="14sp"
                        android:textColor="@color/text1"
                        android:gravity="center"/>
                </LinearLayout>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <!-- Fifth item -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:src="@drawable/dummy_app_place" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="14sp"
                        android:textColor="@color/text1"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>


            <!-- "Always" Label -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/always"
                android:textSize="12sp"
                android:textStyle="bold"
                android:gravity="end"
                android:textColor="@color/primaryColor" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/_16sdp"
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0"
            android:lineSpacingExtra="0dp"
            android:text="@string/select_pdf_reader_icon_and_click_always_to_set_it_as_default"
            android:textColor="@color/text1"
            android:textSize="20sp"
            android:fontFamily="sans-serif"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSetDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_btn_share"
            android:elevation="0dp"
            android:letterSpacing="0"
            android:shadowColor="@android:color/transparent"
            android:text="@string/ok"
            android:fontFamily="sans-serif"
            android:stateListAnimator="@null"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</FrameLayout>
